--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -65,44 +65,61 @@ body {
 .menu {
   position: fixed;
   width: 100vw;
-  line-height: 50px;
+  line-height: 40px;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.5);
   z-index: 1;
-}
 
-.menu__marca {
-  position: fixed;
-  float: left;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: center;
-  color: $color-secu;
-}
-
-.menu__items {
-  line-height: 50px;
-  list-style: none;
-  overflow: hidden;
-  text-align: right;
-  margin-right: 15px;
-  transition: 1s;
-
-  li {
-    display: inline-block;
+  .menu__marca {
+    position: fixed;
+    float: left;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    color: $color-secu;
   }
 
-  a {
-    font-weight: normal;
-    font-size: 16px;
-    text-align: left;
-    color: $color-menu;
-    margin-left: 10px;
-  }
+  .menu__ul,
+  .menu__ul2 {
+    list-style: none;
+    overflow: hidden;
+    text-align: right;
+    margin-right: 15px;
+    transition: 0.5s;
 
-  a:hover {
-    padding-bottom: 10px;
-    border-bottom: 5px solid $color-prim;
+    .menu__li {
+      display: inline-block;
+    }
+
+    .menu__link {
+      font-weight: normal;
+      font-size: 16px;
+      text-align: left;
+      color: $color-menu;
+      margin-left: 10px;
+      display: block;
+      transition: 100ms;
+    }
+
+    .menu__link:hover {
+      border-bottom: 3px solid $color-prim;
+      background-color: white;
+    }
+
+    .menu__ul2 {
+      display: none;
+      position: absolute;
+      margin-top: 40px;
+      margin-left: 5px;
+      min-width: 140px;
+      text-align: left;
+      background-color: white;
+      filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.1));
+    }
+
+    .menu__li:hover > .menu__ul2 {
+      display: block;
+    }
   }
 }
 
