--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -65,10 +65,11 @@ body {
 .menu {
   position: fixed;
   width: 100vw;
-  line-height: 40px;
+  line-height: 50px;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.2);
   z-index: 1;
+  transition: 0.6s;
 
   .menu__marca {
     position: fixed;
@@ -109,7 +110,7 @@ body {
     .menu__ul2 {
       display: none;
       position: absolute;
-      margin-top: 40px;
+      margin-top: 50px;
       margin-left: 5px;
       min-width: 140px;
       text-align: left;
@@ -121,6 +122,10 @@ body {
       display: block;
     }
   }
+}
+
+.menu.sticky {
+  background-color: rgba(255, 255, 255, 1);
 }
 
 // ENCABEZADO / HERO  **********************
