--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -97,14 +97,15 @@ body {
       font-size: 16px;
       text-align: left;
       color: $color-menu;
-      margin-left: 10px;
+      margin-left: 15px;
       display: block;
       transition: 100ms;
     }
 
     .menu__link:hover {
       border-bottom: 3px solid $color-prim;
-      background-color: white;
+      color: black;
+      font-weight: 500;
     }
 
     .menu__ul2 {
@@ -181,24 +182,38 @@ body {
 
 section:nth-of-type(1) {
   background-color: white;
+  width: 100vw;
+  height: 100vh;
 }
 section:nth-of-type(2) {
   background-color: royalblue;
+  width: 100vw;
+  height: 100vh;
 }
 section:nth-of-type(3) {
   background-color: salmon;
+  width: 100vw;
+  height: 100vh;
 }
 section:nth-of-type(4) {
   background-color: seagreen;
+  width: 100vw;
+  height: 100vh;
 }
 section:nth-of-type(5) {
   background-color: skyblue;
+  width: 100vw;
+  height: 100vh;
 }
 section:nth-of-type(6) {
   background-color: slateblue;
+  width: 100vw;
+  height: 100vh;
 }
 section:nth-of-type(7) {
   background-color: tan;
+  width: 100vw;
+  height: 100vh;
 }
 
 // SECCIÓN PRODUCTOS  *********************
