Agregada sombra al menú de navegación

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -126,6 +126,7 @@ body {
 
 .menu.sticky {
   background-color: rgba(255, 255, 255, 1);
+  filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.3));
 }
 
 // ENCABEZADO / HERO  **********************
