Agregado el selector de activo en el menú de navegación

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,6 +9,7 @@ html,
 body {
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
+  scroll-padding: 60px;
 }
 html img,
 body img {
@@ -52,13 +53,13 @@ body p {
 .menu {
   position: fixed;
   width: 100vw;
-  line-height: 50px;
+  line-height: 60px;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0);
   z-index: 1;
   transition: 0.6s;
 }
-.menu .menu__marca {
+.menu .menu__logo {
   position: fixed;
   float: left;
   font-weight: bold;
@@ -69,7 +70,6 @@ body p {
 .menu .menu__ul,
 .menu .menu__ul2 {
   list-style: none;
-  overflow: hidden;
   text-align: right;
   margin-right: 15px;
   transition: 0.5s;
@@ -93,14 +93,17 @@ body p {
   border-bottom: 3px solid #7713bf;
   color: black;
 }
+.menu .menu__ul .menu__link.active,
+.menu .menu__ul2 .menu__link.active {
+  border-bottom: 3px solid #7713bf;
+  color: black;
+}
 .menu .menu__ul .menu__ul2,
 .menu .menu__ul2 .menu__ul2 {
   display: none;
   position: absolute;
-  margin-top: 50px;
-  margin-left: 5px;
+  margin-top: 63px;
   min-width: 140px;
-  text-align: left;
   background-color: white;
   filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.1));
 }
@@ -128,7 +131,7 @@ body p {
   height: 100vh;
   background: radial-gradient(rgba(255, 255, 255, 0.74) 0%, white 100%);
 }
-.hero h1 {
+.hero .hero__h1 {
   font-weight: bold;
   font-size: 70px;
   letter-spacing: 0.02em;
@@ -138,14 +141,14 @@ body p {
   text-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
   transform: translateY(200px);
 }
-.hero h3 {
+.hero .hero__h3 {
   font-weight: bold;
   font-size: 22px;
   text-align: left;
   color: #1c2126;
   transform: translateY(205px);
 }
-.hero p {
+.hero .hero__p {
   font-weight: normal;
   font-size: 18px;
   text-align: left;
@@ -158,43 +161,43 @@ body p {
 
 section:nth-of-type(1) {
   background-color: white;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 section:nth-of-type(2) {
   background-color: royalblue;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 section:nth-of-type(3) {
   background-color: salmon;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 section:nth-of-type(4) {
   background-color: seagreen;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 section:nth-of-type(5) {
   background-color: skyblue;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 section:nth-of-type(6) {
   background-color: slateblue;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 section:nth-of-type(7) {
   background-color: tan;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
