--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -20,6 +20,7 @@ html,
 body {
   font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
+  scroll-padding: 60px;
 
   img {
     vertical-align: top;
@@ -65,13 +66,13 @@ body {
 .menu {
   position: fixed;
   width: 100vw;
-  line-height: 50px;
+  line-height: 60px;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0);
   z-index: 1;
   transition: 0.6s;
 
-  .menu__marca {
+  .menu__logo {
     position: fixed;
     float: left;
     font-weight: bold;
@@ -83,7 +84,6 @@ body {
   .menu__ul,
   .menu__ul2 {
     list-style: none;
-    overflow: hidden;
     text-align: right;
     margin-right: 15px;
     transition: 0.5s;
@@ -107,13 +107,16 @@ body {
       color: black;
     }
 
+    .menu__link.active {
+      border-bottom: 3px solid $color-prim;
+      color: black;
+    }
+
     .menu__ul2 {
       display: none;
       position: absolute;
-      margin-top: 50px;
-      margin-left: 5px;
+      margin-top: 63px;
       min-width: 140px;
-      text-align: left;
       background-color: white;
       filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.1));
     }
@@ -146,7 +149,7 @@ body {
     background: radial-gradient(rgba(255, 255, 255, 0.74) 0%, white 100%);
   }
 
-  h1 {
+  .hero__h1 {
     font-weight: bold;
     font-size: 70px;
     letter-spacing: 0.02em;
@@ -157,7 +160,7 @@ body {
     transform: translateY(200px);
   }
 
-  h3 {
+  .hero__h3 {
     font-weight: bold;
     font-size: 22px;
     text-align: left;
@@ -165,7 +168,7 @@ body {
     transform: translateY(205px);
   }
 
-  p {
+  .hero__p {
     font-weight: normal;
     font-size: 18px;
     text-align: left;
@@ -182,37 +185,37 @@ body {
 
 section:nth-of-type(1) {
   background-color: white;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 section:nth-of-type(2) {
   background-color: royalblue;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 section:nth-of-type(3) {
   background-color: salmon;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 section:nth-of-type(4) {
   background-color: seagreen;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 section:nth-of-type(5) {
   background-color: skyblue;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 section:nth-of-type(6) {
   background-color: slateblue;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 section:nth-of-type(7) {
   background-color: tan;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
