--- a/css/estilos.css
+++ b/css/estilos.css
@@ -201,4 +201,10 @@ section:nth-of-type(7) {
   height: 100vh;
 }
 
+section:nth-of-type(8) {
+  background-color: fuchsia;
+  width: 100%;
+  height: 100vh;
+}
+
 /*# sourceMappingURL=estilos.css.map */
