--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -218,5 +218,10 @@ section:nth-of-type(7) {
   width: 100%;
   height: 100vh;
 }
+section:nth-of-type(8) {
+  background-color: fuchsia;
+  width: 100%;
+  height: 100vh;
+}
 
 // SECCIÓN PRODUCTOS  *********************
