Modificación completa del menú de navegación

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,14 @@ body {
   scroll-behavior: smooth;
   scroll-padding: 60px;
 }
+html header,
+body header {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 1000;
+  transition: 0.6s;
+}
 html img,
 body img {
   vertical-align: top;
@@ -21,10 +29,15 @@ body img {
 html a,
 body a {
   text-decoration: none;
+  padding-right: 10px;
 }
 html p,
 body p {
   text-align: justify;
+}
+html i,
+body i {
+  padding-left: 10px;
 }
 
 .boton {
@@ -38,7 +51,7 @@ body p {
 
 .color-prim {
   background: #7713bf;
-  color: #ffffff;
+  color: white;
 }
 
 .color-secu {
@@ -49,83 +62,354 @@ body p {
 .container {
   max-width: 90%;
   width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  position: relative;
+}
+
+.container2 {
+  max-width: 90%;
+  width: 1200px;
   margin: 0px auto;
 }
 
-.header {
-  position: fixed;
-  width: 100%;
-  line-height: 60px;
+.logo-container {
+  flex: 1;
+  display: flex;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0);
-  z-index: 1;
-  transition: 0.6s;
 }
 
-.header__logo {
-  position: sticky;
-  float: left;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: center;
+.nav-btn {
+  display: flex;
+  position: relative;
+}
+
+.nav-links {
+  flex: 2;
+}
+
+.logo {
   color: #4cbfbf;
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 3rem;
 }
 
-.menu {
-  position: fixed;
-  width: 100%;
-  line-height: 57px;
+.nav-links > ul {
+  display: flex;
+  justify-content: center;
   align-items: center;
-  z-index: 2;
-  transition: 0.6s;
 }
 
-.menu__ul,
-.menu__ul2 {
-  text-align: right;
+.nav-link {
+  position: relative;
+}
+
+.nav-link > a {
+  line-height: 3rem;
+  color: #888888;
+  padding: 0 0.8rem;
+  letter-spacing: 1px;
+  font-size: 0.95rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.3s;
+}
+
+.nav-link > a > i {
+  margin-left: 0.2rem;
+}
+
+.nav-link:hover > a {
+  background: #7713bf;
+  color: white;
+}
+
+.nav-link.active a {
+  background: #7713bf;
+  color: white;
+}
+
+.dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 10rem;
+  transform: translateY(10px);
+  opacity: 0;
+  pointer-events: none;
   transition: 0.5s;
 }
 
-.menu__li {
-  display: inline-block;
+.dropdown ul {
+  position: relative;
 }
 
-.menu__link {
-  float: none;
-  font-weight: normal;
-  font-size: 16px;
-  text-align: left;
+.dropdown-link > a {
+  display: flex;
+  background-color: white;
   color: #888888;
-  margin-left: 10px;
-  display: block;
-  transition: 100ms;
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  align-items: center;
+  justify-content: space-between;
+  transition: 0.2s;
 }
 
-.menu__link:hover {
-  border-bottom: 3px solid #7713bf;
-  color: black;
+.dropdown-link:hover > a {
+  background: #a332f3;
+  color: white;
 }
 
-.menu__link.active {
-  border-bottom: 3px solid #7713bf;
-  color: black;
+.dropdown-link:not(:nth-last-child(2)) {
+  border-bottom: 1px solid #efefef;
 }
 
-.menu__ul2 {
+.dropdown-link i {
+  transform: rotate(-90deg);
+}
+
+.arrow {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: -5.5px;
+  left: 32px;
+  background-color: white;
+  transform: rotate(45deg);
+  cursor: pointer;
+  transition: 0.3s;
+  z-index: -1;
+}
+
+.dropdown-link:first-child:hover ~ .arrow {
+  background-color: #a332f3;
+}
+
+.dropdown-link {
+  position: relative;
+}
+
+.nav-link:hover > .dropdown,
+.dropdown-link:hover > .dropdown {
+  transform: translate(0, 0);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.hamburger-menu-container {
+  flex: 1;
   display: none;
   position: absolute;
-  margin-top: 60px;
-  min-width: 140px;
-  background-color: whitesmoke;
-  filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.1));
-  z-index: 2;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0rem;
+  align-items: center;
 }
 
-.menu__li:hover > .menu__ul2 {
-  display: block;
+.hamburger-menu {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.header.sticky {
+.hamburger-menu div {
+  width: 1.6rem;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #1c2126;
+  position: relative;
+  z-index: 1001;
+  transition: 0.5s;
+}
+
+.hamburger-menu div:before,
+.hamburger-menu div:after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: #1c2126;
+  border-radius: 3px;
+  transition: 0.5s;
+}
+
+.hamburger-menu div:before {
+  transform: translateY(-7px);
+}
+
+.hamburger-menu div:after {
+  transform: translateY(7px);
+}
+
+#check {
+  position: absolute;
+  top: 50%;
+  right: 0.1rem;
+  transform: translateY(-50%);
+  width: 1.5rem;
+  height: 1.5rem;
+  z-index: 90000;
+  cursor: pointer;
+  opacity: 0;
+  display: none;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div {
+  background-color: transparent;
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:before {
+  transform: translateY(0) rotate(-45deg);
+}
+
+#check:checked ~ .hamburger-menu-container .hamburger-menu div:after {
+  transform: translateY(0) rotate(45deg);
+}
+
+@keyframes animation {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@media (max-width: 768px) {
+  .hamburger-menu-container {
+    display: flex;
+  }
+
+  .logo {
+    font-size: 0.9rem;
+  }
+
+  #check {
+    display: block;
+  }
+
+  .nav-btn {
+    position: fixed;
+    height: calc(100vh - 3rem);
+    top: 3rem;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateX(170%);
+    transition: 0.65s;
+  }
+
+  #check:checked ~ .nav-btn {
+    transform: translateX(30%);
+  }
+
+  #check:checked ~ .nav-btn .nav-link,
+#check:checked ~ .nav-btn .log-sign {
+    animation: animation 0.5s ease forwards var(--i);
+  }
+
+  .nav-links {
+    flex: initial;
+    width: 100%;
+  }
+
+  .nav-links > ul {
+    flex-direction: column;
+  }
+
+  .nav-link {
+    width: 100%;
+    opacity: 0;
+    transform: translateY(15px);
+  }
+
+  .nav-link > a {
+    line-height: 1;
+    padding: 1.6rem 2rem;
+  }
+
+  .nav-link:hover > a {
+    transform: scale(1);
+    background-color: #a332f3;
+  }
+
+  .dropdown,
+.dropdown.second {
+    position: initial;
+    top: initial;
+    left: initial;
+    transform: initial;
+    opacity: 1;
+    pointer-events: auto;
+    width: 100%;
+    padding: 0;
+    background-color: #7713bf;
+    display: none;
+  }
+
+  .nav-link:hover > .dropdown,
+.dropdown-link:hover > .dropdown {
+    display: block;
+  }
+
+  .nav-link:hover > a > i,
+.dropdown-link:hover > a > i {
+    transform: rotate(360deg);
+  }
+
+  .dropdown-link > a {
+    background: #7713bf;
+    color: #fff;
+    padding: 1.2rem 2rem;
+    line-height: 1;
+  }
+
+  .dropdown-link:not(:nth-last-child(2)) {
+    border-bottom: none;
+  }
+
+  .arrow {
+    z-index: 1;
+    background-color: #5b1091;
+    left: 10%;
+    transform: scale(1.1) rotate(45deg);
+    transition: 0.5s;
+  }
+
+  .nav-link:hover .arrow {
+    background-color: #a332f3;
+  }
+
+  .dropdown-link:hover > a {
+    background-color: #5b1091;
+  }
+
+  .dropdown-link:first-child:hover ~ .arrow {
+    background-color: #5b1091;
+  }
+
+  .nav-link > a > i {
+    font-size: 1.1rem;
+    transform: rotate(-90deg);
+    transition: 0.7s;
+  }
+
+  .dropdown i {
+    font-size: 1rem;
+    transition: 0.7s;
+  }
+}
+header.sticky {
   background-color: white;
   filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.3));
 }
@@ -219,25 +503,6 @@ section:nth-of-type(8) {
   background-color: fuchsia;
   width: 100%;
   height: 100vh;
-}
-
-@media screen and (max-width: 768px) {
-  .menu {
-    top: 60px;
-    background: #ffffff;
-    width: 70%;
-    height: 100vh;
-  }
-
-  .menu__ul {
-    display: flex;
-    flex-direction: column;
-  }
-
-  menu__link {
-    float: none;
-    text-align: right;
-  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
