--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -46,10 +46,6 @@ body {
   p {
     text-align: justify;
   }
-
-  i {
-    padding-left: 10px;
-  }
 }
 
 .boton {
@@ -132,7 +128,7 @@ body {
   font-size: 0.95rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
   transition: 0.3s;
 }
 
@@ -335,6 +331,20 @@ body {
     display: block;
   }
 
+  .nav__overlay {
+    position: fixed;
+    top: 47.5px;
+    // right: 79.99%;
+    width: 100vw;
+    height: calc(100vh);
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(2px);
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1.6s;
+    // z-index: 95000;
+  }
+
   .nav-btn {
     position: fixed;
     height: calc(100vh - 3rem);
@@ -347,17 +357,26 @@ body {
     justify-content: space-between;
     overflow-x: hidden;
     overflow-y: auto;
-    transform: translateX(170%);
+    transform: translateX(100%);
     transition: 0.65s;
+    z-index: 95000;
   }
 
-  #check:checked ~ .nav-btn {
-    transform: translateX(30%);
+  .nav--open .nav-btn {
+    // #check:checked ~ .nav-btn {
+    transform: translateX(20%);
+  }
+
+  .nav--open .nav__overlay {
+    // #check:checked ~ .nav__overlay {
+    visibility: visible;
+    opacity: 1;
   }
 
   #check:checked ~ .nav-btn .nav-link,
   #check:checked ~ .nav-btn .log-sign {
     animation: animation 0.5s ease forwards var(--i);
+    // animation: animation 0.5s ease forwards 0.5s;
   }
 
   .nav-links {
